--- a/styles/game.css
+++ b/styles/game.css
@@ -1,3 +1,10 @@
+#instructions {
+}
+
+.start-game-button {
+
+}
+
 #game {
   border: solid;
   margin: auto;
@@ -13,6 +20,8 @@
 }
 
 .score, .lives{
+  display: inline-block;
   font-family: sans-serif;
   font-size: 20px;
+  padding-right: 3rem;
 }
